# dsis-python-client

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DSIS_SCHEMAS_ANALYSIS.md  README.md  SECURITY.md  example.py  example_protobuf.py  example_streaming.py  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/: dependabot.yml
.github/workflows/: build.yml  lint-pr.yml  lint.yml  publish-docs.yml  publish.yml  release.yml  test.yml
docs/: changelog.md  index.md
docs/api/: index.md
docs/guides/: advanced-serialization.md  common-vs-native-model.md  getting-started.md  query-builder.md  working-with-binary-data.md
docs/notebooks/: .env_dsis  fetch_faults_with_dsis_client.ipynb  fetch_horizon_with_dsis_client.ipynb  fetch_polygons_with_dsis_client.ipynb  fetch_surfacegrid_with_dsis_client.ipynb  plot_fault_3d.py  plotting_functions.py  test_fault.py
scripts/: generate-mkdocs-changelogs.py
src/dsis_client/: __init__.py
src/dsis_client/api/: __init__.py  auth.py  client.py  config.py  dsis_query.py  dsis_query_builder.py  exceptions.py  query_builder.py
src/dsis_client/api/auth/: auth.py
src/dsis_client/api/client/: __init__.py  _base.py  _bulk_data.py  _http.py  _pagination.py  _query.py  base_client.py  dsis_client.py  model_operations.py
src/dsis_client/api/config/: config.py
src/dsis_client/api/models/: __init__.py  schema_helper.py  serialization.py
tests/: test_auth.py  test_bulk_data_media_link.py  test_bulk_data_stream.py  test_dsis_client_execute_query.py  test_main.py  test_query_builder.py
(+2 files in other folders)
