[project]
name = "dsis-client"
version = "0.4.1"
description = "A Python client for communicating with DSIS"
readme = "README.md"
authors = []
requires-python = ">=3.11"
dependencies = [
	"msal",
	"dsis-schemas[protobuf]>=0.0.2"
]
license = "MIT"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
	"pytest>=7.0.0",
	"pytest-cov>=4.0.0",
	"pytest-mock>=3.10.0",
]

[project.scripts]
dsis-client = "dsis_client:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
